# tui-chat

./: Cargo.toml  README.md  ROADMAP.md
src/: app.rs  component.rs  lib.rs  renderer.rs  theme.rs  utils.rs
src/commands/: mod.rs
src/components/: attachment.rs  editor.rs  foldable.rs  markdown.rs  messages.rs  mod.rs  notice.rs  picker.rs  status_bar.rs  text.rs  tool_result.rs  viewport.rs
